# schaeffler

./: BO_driver.py  BO_pipeline.md  README.md  README_ISAAC.md  isaacsim_config.md  nav2_params.yaml  nav2_params_modified.yaml  readme_turtle.md  requirements.txt
Compute_kpi/: J_test_scatter.py  compute_kpi_normalized.py  compute_kpis.py  j_plot_bar.py
Real Robot/: mqtt_publisher.py  mqtt_record_pose.py  mqtt_record_pose_minimal.py
Sim Robot/: extract_rosbagdata.py  plot.py  preprocess_csv.py  processed_4.csv  sim_odom_1761747881.csv
Sim_Robot/: odom_extraction_manual_1.csv  odom_extraction_manual_2.csv  odom_extraction_manual_3.csv  odom_extraction_manual_4.csv  odom_extraction_manual_5.csv  odom_extraction_manual_6.csv  odom_extraction_manual_7.csv  odom_extraction_manual_8.csv  plot.py  preprocess_csv.py  processed_5.csv  processed_7.csv  sim_odom_1762261068.csv  sim_odom_1762338059.csv  sim_odom_1762508735.csv  sim_odom_1762773086.csv  sim_odom_1763457614.csv  sim_odom_1770372753.csv  validation.csv
images/itr_1_5m/data/: sim_after.csv
images/itr_2_5m/data/: real_after.csv  sim_after.csv
images/itr_3_5m_without_DCN_cap/dd_zero_fixed/: dd_zero_fixed_0.db3  metadata.yaml  processed_7.csv  sim_odom_1763111535.csv
images/itr_static_1/: sim_with_obs.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
issues/: issues.md
log/: latest_build
logs/: J_nav2_run_1.txt  J_nav2_run_2.txt  J_nav2_run_3.txt  nav2_run_1.csv  nav2_run_2.csv  nav2_run_3.csv  omron_run.csv  omron_run_static_obstacle.csv  test_2.csv  test_3.csv  test_4.csv  test_5.csv
macro/: macro_logger.py  macro_setSpeed.py  neu.csv  plot_robot_csv.py  readme.md
maps/: custom_map_save.pgm  custom_map_save.yaml  custom_map_serial.data  my_map_save.pgm  my_map_save.yaml  my_map_serial.data
orchestrator /: main.py  orch.sh  p2.py  run_all.sh
plotting/: plot.py  preprocess_csv.py  real_odom_for_kpi.csv
sim_bags/: test.py
src/: BO.py  BO_fig.py  bo_evals.csv  dummy_BO.py  nav2_test.py
src/GetSetParams/: BO.py  BO_s2.py  README.md  bo_evals.csv  bo_evals_12.csv  bo_evals_15.csv  bo_evals_7.csv  bo_plots.py  bo_surface_plot.py  bounds.yaml  dummpy_BO.py  get_params_simple.py  nav2_optimize_and_override.py  nav2_optimize_and_override_state.py  nav2_params.yaml  nav2_params_bo.yaml  nav2_params_modified.yaml  nav2_yaml_override.py  new_params.yaml  optimizer_state.json  standalone_wrapper.py
src/agv_orchestrator/: CMakeLists.txt  README.md  package.xml
src/agv_orchestrator/launch/: isaac_and_nav2.launch.py
src/agv_orchestrator/rviz/: config.rviz
src/agv_orchestrator/scripts/: compute_kpi_normalized.py
src/emma_visualization/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/isaac_sim_emma/: CMakeLists.txt  package.xml
src/localization/: CMakeLists.txt  package.xml
src/nav_bringup/: CMakeLists.txt  bringup_document.md  package.xml
src/navigation/: CMakeLists.txt  package.xml
src/scripts/: compute_kpi_normalized.py  extract_rosbagdata.py  nav.py  nav2_test.py  nav2_test_without_venv.py  preprocess_csv.py
(+90 files in other folders)
