cmake_minimum_required(VERSION 3.8)
project(agv_orchestrator)

find_package(ament_cmake REQUIRED)

# Install launch files into the standard location
install(DIRECTORY launch/
  DESTINATION share/${PROJECT_NAME}/launch
)

# NEW: install rviz configs
install(DIRECTORY rviz/
  DESTINATION share/${PROJECT_NAME}/rviz
)


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
